marks management in master degree executed by degree curricular plan